--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,14 @@ uuid = "2f96bb34-afd9-46ae-bcd0-9b2d4372fe3c"
 authors = ["Seth Axen <seth.axen@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+
 [compat]
-julia = "1"
+InferenceObjects = "0.1.1"
+NCDatasets = "0.12"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
