--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,18 @@ authors = ["Seth Axen <seth.axen@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
 [compat]
+DataDeps = "0.7"
 InferenceObjects = "0.1.1"
+JSON3 = "1"
 NCDatasets = "0.12"
+StructTypes = "1"
 julia = "1.6"
 
 [extras]
