--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
 [compat]
@@ -15,6 +16,7 @@ DataDeps = "0.7"
 InferenceObjects = "0.1.1"
 JSON3 = "1"
 NCDatasets = "0.12"
+OrderedCollections = "1"
 StructTypes = "1"
 julia = "1.6"
 
