--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Seth Axen <seth.axen@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 InferenceObjectsNetCDF = "7cb6d088-77df-42c3-8f05-5ca8d42599d1"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
