--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,26 @@ uuid = "2f96bb34-afd9-46ae-bcd0-9b2d4372fe3c"
 authors = ["Seth Axen <seth.axen@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
+DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
+InferenceObjectsNetCDF = "7cb6d088-77df-42c3-8f05-5ca8d42599d1"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+
 [compat]
-julia = "1"
+DataDeps = "0.7"
+InferenceObjects = "0.1"
+InferenceObjectsNetCDF = "0.1"
+JSON3 = "1"
+OrderedCollections = "1"
+StructTypes = "1"
+julia = "1.6"
 
 [extras]
+InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["InferenceObjects", "Test"]
