--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 [compat]
 DataDeps = "0.7"
 InferenceObjects = "0.1, 0.2, 0.3"
-InferenceObjectsNetCDF = "0.1, 0.2, 0.3"
+InferenceObjectsNetCDF = "0.1, 0.2, 0.3, 0.4"
 JSON3 = "1"
 OrderedCollections = "1"
 StructTypes = "1"
