--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 DataDeps = "0.7"
 InferenceObjects = "0.3.10"
 JSON3 = "1"
-NCDatasets = "0.12"
+NCDatasets = "0.12, 0.13"
 OrderedCollections = "1"
 StructTypes = "1"
 julia = "1.6"
