--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ Artifacts = "1.6"
 DataDeps = "0.7"
 InferenceObjects = "0.3.10"
 JSON3 = "1"
-NCDatasets = "0.12, 0.13"
+NCDatasets = "0.12, 0.13, 0.14"
 OrderedCollections = "1"
 StructTypes = "1"
 julia = "1.6"
