--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ArviZExampleData"
 uuid = "2f96bb34-afd9-46ae-bcd0-9b2d4372fe3c"
 authors = ["Seth Axen <seth.axen@gmail.com> and contributors"]
-version = "0.1.9"
+version = "0.1.10"
 
 [deps]
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
@@ -15,7 +15,7 @@ StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 [compat]
 Artifacts = "1.6"
 DataDeps = "0.7"
-InferenceObjects = "0.3.10"
+InferenceObjects = "0.3.10, 0.4"
 JSON3 = "1"
 NCDatasets = "0.12, 0.13, 0.14"
 OrderedCollections = "1"
