--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 
 [compat]
-Artifacts = "1.6"
+Artifacts = "1.6, 1"
 DataDeps = "0.7"
 InferenceObjects = "0.3.10, 0.4"
 JSON3 = "1"
